--- a/coffee_project/src/main/resources/templates/user/list.html
+++ b/coffee_project/src/main/resources/templates/user/list.html
@@ -16,125 +16,139 @@
 
 </head>
 <body>
-<div th:replace="layout::nav"></div>
 
 <div class="container-fluid">
     <div class="row">
-        <div th:replace="layout::content1"></div>
+        <div th:replace="layout::side-bar">
+        </div>
+        <div class="col-10  col-sm-9 col-md-9 col-lg-10">
+            <div th:replace="layout::nav-bar">
+            </div>
+            <div class="row min-vh-100 content">
+                <div class="col-12">
 
-        <div class="col-sm-10" style="background-color: #FEFAE0;min-height: 700px">
+                    <!-----------------------//CODE------------------------------------------------------------>
+                    <h1 style="text-align: center; margin-bottom: 20px">Quản Lý Nhân Viên</h1>
 
-            <!-----------------------//CODE------------------------------------------------------------>
-            <h1 style="text-align: center; margin-bottom: 20px">Quản Lý Nhân Viên</h1>
+                    <div class="justify-content-center" style="margin-bottom: 20px">
 
-            <div class="justify-content-center" style="margin-bottom: 20px">
+                        <div class="row">
+                            <div class="col-1">
 
-                <div class="row">
-                    <div class="col-1">
-
-                        <a style="text-decoration: none" href="/order/">
-                            <button title="Quay lại"
-                                    class="btn btn-primary">
-                                <i class="fa-solid fa-circle-arrow-left"></i></button>
-                        </a>
-
-                    </div>
-
-                    <div class="col-4">
-                    </div>
-                    <div class="col-7">
-                        <form th:action="@{/user/list}" th:method="get">
-                            <div class="input-group d-flex justify-content-end">
-
-                                <div class="form-outline">
-                                    <input id="search-input" name="search" type="search" placeholder="Tên nhân viên"
-                                           class="form-control" th:value="${search}"/>
-                                </div>
-                                <button id="search-button" type="submit" class="btn btn-primary">
-                                    <i class="fas fa-search"></i>
-                                </button>
+                                <a style="text-decoration: none" href="/order/">
+                                    <button title="Quay lại"
+                                            class="btn btn-primary">
+                                        <i class="fa-solid fa-circle-arrow-left"></i></button>
+                                </a>
 
                             </div>
-                        </form>
+
+                            <div class="col-4">
+                            </div>
+                            <div class="col-7">
+                                <form th:action="@{/user/list}" th:method="get">
+                                    <div class="input-group d-flex justify-content-end">
+
+                                        <div class="form-outline">
+                                            <input id="search-input" name="search" type="search"
+                                                   placeholder="Tên nhân viên"
+                                                   class="form-control" th:value="${search}"/>
+                                        </div>
+                                        <button id="search-button" type="submit" class="btn btn-primary">
+                                            <i class="fas fa-search"></i>
+                                        </button>
+
+                                    </div>
+                                </form>
+                            </div>
+
+                        </div>
+
+                        <div class="table-responsive" style="margin-top: 20px">
+                            <table class="table table-hover">
+                                <thead>
+                                <th scope="col">STT</th>
+                                <th scope="col">Tên</th>
+                                <th scope="col">Giới tính</th>
+                                <th scope="col">Tài khoản</th>
+                                <th scope="col">Lương</th>
+                                <th scope="col">Vị trí</th>
+                                <th colspan="3" scope="col" style="text-align: center">Hành động</th>
+
+                                </thead>
+                                <tr th:each="user, status :${userPage}">
+                                    <th th:text="${status.count}">
+                                    <td th:text="${user.userName}">
+                                    <td>
+                                        <div th:if="${user.userGender == null}">Khác</div>
+                                        <div th:if="${user.userGender}">Nam</div>
+                                        <div th:if="${!user.userGender}">Nữ</div>
+                                    </td>
+                                    <td th:text="${user.account.accountName}">
+                                    <td th:text="${#numbers.formatDecimal(user.userSalary, 0, 'COMMA', 0, 'POINT') + ' VND'}"></td>
+                                    <td th:text="${user.employeeType.employeeTypeName}">
+                                    <td style="text-align: center">
+
+                                        <a th:href="@{/user/change-form/{id}(id=${user.userId})}">
+                                            <button type="button" class="btn btn-primary">
+                                                <i class="fa-solid fa-pen-to-square"></i>
+                                            </button>
+                                        </a>
+                                    </td>
+                                    <td style="text-align: center">
+
+                                        <!-- Button trigger detail modal -->
+                                        <button type="button" class="btn btn-primary"
+                                                data-bs-toggle="modal"
+                                                data-bs-target="#exampleModal1"
+                                                th:attr="onclick=|showDetail(${user.userId})|">
+                                            <i class="fa-solid fa-circle-info"></i>
+                                        </button>
+                                    </td>
+                                    <td style="text-align: center">
+                                        <button style="text-align: center" type="button" class="btn btn-danger"
+                                                data-bs-toggle="modal"
+                                                data-bs-target="#exampleModal"
+                                                th:attr="onclick=|showInfo(${user.userId},'${user.userName}')|">
+                                            <i class="fa-regular fa-trash-can"></i>
+                                        </button>
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+                        <!---------------------------Paging--------------------------------------------------------------->
+                        <div th:if="${userPage.totalPages >1}">
+                            <div class="d-flex justify-content-center">
+                                <nav aria-label="Page navigation example">
+                                    <ul class="pagination">
+                                        <li th:class="${!userPage.hasPrevious()} ? 'page-item disabled' : 'page-item'">
+                                            <a
+                                                    class="page-link"
+                                                    th:href="@{/user/list/(page=${userPage.number -1},search=${search})}">Lùi</a>
+                                        </li>
+
+                                        <li class="page-link disabled"><span
+                                                th:text="${userPage.number +1}"></span>/<span
+                                                th:text="${userPage.totalPages}"></span>
+                                        </li>
+
+                                        <li th:class="${!userPage.hasNext()} ? 'page-item disabled' : 'page-item'"><a
+                                                class="page-link"
+                                                th:href="@{/user/list/(page=${userPage.number +1},search=${search})}">Tới</a>
+                                        </li>
+                                    </ul>
+                                </nav>
+                            </div>
+                        </div>
+                        <!------------------------End Paging------------------------------------------------------------>
                     </div>
 
+                    <!------------------END CODE------------------------------------------------------------------------->
+
+
                 </div>
-
-                <div class="table-responsive" style="margin-top: 20px">
-                    <table class="table table-hover">
-                        <thead>
-                        <th scope="col">STT</th>
-                        <th scope="col">Tên</th>
-                        <th scope="col">Giới tính</th>
-                        <th scope="col">Tài khoản</th>
-                        <th scope="col">Lương</th>
-                        <th scope="col">Vị trí</th>
-                        <th colspan="3" scope="col" style="text-align: center">Hành động</th>
-
-                        </thead>
-                        <tr th:each="user, status :${userPage}">
-                            <th th:text="${status.count}">
-                            <td th:text="${user.userName}">
-                            <td>
-                                <div th:if="${user.userGender == null}">Khác</div>
-                                <div th:if="${user.userGender}">Nam</div>
-                                <div th:if="${!user.userGender}">Nữ</div>
-                            </td>
-                            <td th:text="${user.account.accountName}">
-                            <td th:text="${#numbers.formatDecimal(user.userSalary, 0, 'COMMA', 0, 'POINT') + ' VND'}"></td>
-                            <td th:text="${user.employeeType.employeeTypeName}">
-                            <td style="text-align: center">
-
-                                <a th:href="@{/user/change-form/{id}(id=${user.userId})}">
-                                    <button type="button" class="btn btn-primary">
-                                        <i class="fa-solid fa-pen-to-square"></i>
-                                    </button>
-                                </a>
-                            </td>
-                            <td style="text-align: center">
-
-                                <!-- Button trigger detail modal -->
-                                <button type="button" class="btn btn-primary"
-                                        data-bs-toggle="modal"
-                                        data-bs-target="#exampleModal1"
-                                        th:attr="onclick=|showDetail(${user.userId})|">
-                                    <i class="fa-solid fa-circle-info"></i>
-                                </button>
-                            </td>
-                            <td style="text-align: center">
-                                <button style="text-align: center" type="button" class="btn btn-danger"
-                                        data-bs-toggle="modal"
-                                        data-bs-target="#exampleModal"
-                                        th:attr="onclick=|showInfo(${user.userId},'${user.userName}')|">
-                                    <i class="fa-regular fa-trash-can"></i>
-                                </button>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                <!---------------------------Paging--------------------------------------------------------------->
-                <div th:if="${userPage.totalPages >1}">
-                    <div class="d-flex justify-content-center">
-                        <nav aria-label="Page navigation example">
-                            <ul class="pagination">
-                                <li th:class="${!userPage.hasPrevious()} ? 'page-item disabled' : 'page-item'"><a
-                                        class="page-link"
-                                        th:href="@{/user/list/(page=${userPage.number -1},search=${search})}">Lùi</a>
-                                </li>
-
-                                <li class="page-link disabled"><span th:text="${userPage.number +1}"></span>/<span
-                                        th:text="${userPage.totalPages}"></span>
-                                </li>
-
-                                <li th:class="${!userPage.hasNext()} ? 'page-item disabled' : 'page-item'"><a
-                                        class="page-link"
-                                        th:href="@{/user/list/(page=${userPage.number +1},search=${search})}">Tới</a>
-                                </li>
-                            </ul>
-                        </nav>
-                    </div>
-                </div>
-                <!------------------------End Paging------------------------------------------------------------>
+            </div>
+            <div th:replace="layout::footer">
             </div>
         </div>
     </div>
@@ -235,7 +249,6 @@
 <!--//code-->
 
 
-<div th:replace="layout::footer"></div>
 <script>
     //User Detail
     function showDetail(id) {
