[coffee][Cuong][Order]Update layout

--- a/coffee_project/src/main/resources/templates/layout.html
+++ b/coffee_project/src/main/resources/templates/layout.html
@@ -23,7 +23,7 @@
 
     </style>
     <link rel="stylesheet" href="../static/bootstrap-5.0.2-dist/css/bootstrap.css">
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 </head>
 <body>
 <div class="container-fluid">
@@ -45,7 +45,7 @@
                     <li class="nav-item w-100">
                         <a href="/order/" class="nav-link align-middle px-0 text-light">
                             <i class="fa-solid fa-file-pen" style="color: #ffffff;"></i><span
-                                class="ms-1 d-none d-sm-inline">Dặt sản phẩm</span>
+                                class="ms-1 d-none d-sm-inline">Đặt sản phẩm</span>
                         </a>
                     </li>
                     <li class="nav-item w-100">
@@ -138,6 +138,5 @@
     </div>
 </div>
 <script src="../static/bootstrap-5.0.2-dist/js/bootstrap.bundle.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 </body>
 </html>
