--- a/coffee_project/src/main/resources/templates/product/create.html
+++ b/coffee_project/src/main/resources/templates/product/create.html
@@ -115,7 +115,7 @@
                                 <div class="form-group">
                                     <button type="submit" class="btn btn-primary">Thêm mới</button>
                                     <a style="color: white" href="/product">
-                                        <button type="button" class="btn btn-secondary">Hủy</button>
+                                        <button type="button" class="btn btn-secondary">Quay lại</button>
                                     </a>
                                 </div>
                             </div>
