--- a/coffee_project/src/main/resources/templates/product/edit.html
+++ b/coffee_project/src/main/resources/templates/product/edit.html
@@ -125,7 +125,7 @@
                                     <div class="form-group">
                                         <button type="submit" class="btn btn-primary">Cập nhật</button>
                                         <a style="color: white" href="/product">
-                                            <button type="button" class="btn btn-secondary">Hủy</button>
+                                            <button type="button" class="btn btn-secondary">Quay lại</button>
                                         </a>
                                     </div>
                                 </div>
